# crave

./: .gitignore  README.md  justfile  meson.build  todo.md
.github/workflows/: ci.yaml
scripts/: embed_fonts.py  package_macos.sh
src/: app.c  app.h  clay_backend.h  clay_raylib.c  config.h  db.c  db.h  image.c  image.h  main.c  model.h  theme.h  ui.c
